# pybelqis

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.old  setup.py
belqis/: __init__.py  belqis.py
belqis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pybelqis/: __init__.py  clients.py
src/pybelqis/: __init__.py  clients.py
