[project]
name = "pybelqis"
version = "0.4.0"
authors = [
  { name="Ahmed Khorsi", email="ahmedkhorsi18@gmail.com" },
]
description = "A python client of Belqis systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ahmedkhorsi/pybelqis"
"Bug Tracker" = "https://github.com/ahmedkhorsi/pybelqis/issues"