[project]
name = "pybelqis"
version = "0.4.4"
authors = [
  { name="Ahmed Khorsi", email="ahmedkhorsi18@gmail.com" },
]
description = "A python client of Belqis systems. Allows you to query the services of Belqis systems from a python program"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "gql",
  "aiohttp"
]
[project.urls]
"Homepage" = "https://github.com/ahmedkhorsi/pybelqis"
"Bug Tracker" = "https://github.com/ahmedkhorsi/pybelqis/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"